# rs-camera

./: .gitmodules  CMakeLists.txt  README.md
include/: sched_deadline.hpp
scripts/: lime_extract_model.sh  lime_trace_d435_sensor_probe.sh  lime_view.sh  lock_cpu_freq.sh  trace_setup_rs.sh  update_deps.sh  watchprio.sh
src/: d435_sensor_probe.cpp  smallest_test.cpp
